--- a/requirements_cu121.txt
+++ b/requirements_cu121.txt
@@ -2,11 +2,11 @@ torch_geometric
 pytorch_lightning
 kuzu
 pyarrow
-causal-conv1d>=1.2.0
+causal-conv1d
 mamba-ssm
 --find-links https://download.pytorch.org/whl/cu121
-torch<2.3.0
---find-links https://data.pyg.org/whl/torch-2.2.0+cu121.html
+torch
+--find-links https://data.pyg.org/whl/torch-2.3.0+cu121.html
 pyg_lib
 torch_scatter
 torch_sparse
